5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1836_2603.log
== TEST (2019-07-01 21:15:21) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = sorted ((m [:,0]), reverse=true)
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
c = 1
print (v1)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:16:35) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = sorted ((m [:,0]), reverse=true)
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
c = 1
print (v1)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:18:23) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])

v1 = sorted(v1, reverse=True)
print (v1)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:27:03) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])

v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)
r = zeros ((4,4)dtype=int)

r = array ([v1,v2,v3,v4])
print (r)
-- ERROR:
File "XXXX", line 15
    r = zeros ((4,4)dtype=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:27:59) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])

v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)
r = zeros ((4,4),dtype=int)

r = array ([v1,v2,v3,v4])
print (r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:29:18) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])

v1 = sorted(v1, reverse=True).T
v2 = sorted(v2, reverse=True).T
v3 = sorted(v3, reverse=True).T
v4 = sorted(v4, reverse=True).T
r = zeros ((4,4),dtype=int)

r = array ([v1,v2,v3,v4])
print (r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:30:42) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])

v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)
r = zeros ((4,4),dtype=int)

v1 = v1.T
v2 = v2.T
v3 = v3.T
v4 = v4.T
r = array ([v1,v2,v3,v4])
print (r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:37:13) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([[v1],[v2],[v3],[v4]])
      
print (r.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:37:46) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([[v1],[v2],[v3],[v4]])
      
print (r.T)
-- EXECUTION TIME:
1.12388
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[[4 4 4 4]]

 [[3 3 3 3]]

 [[2 2 2 2]]

 [[1 1 1 1]]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[[4 4 4 3]]

 [[3 3 3 3]]

 [[2 2 2 3]]

 [[1 1 1 3]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:37:52) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([[v1],[v2],[v3],[v4]])
      
print (r.T)
-- EXECUTION TIME:
1.08061
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[[4 4 4 4]]

 [[3 3 3 3]]

 [[2 2 2 2]]

 [[1 1 1 1]]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[[4 4 4 3]]

 [[3 3 3 3]]

 [[2 2 2 3]]

 [[1 1 1 3]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:38:13) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([[v1],[v2],[v3],[v4]])
      
print (r.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:39:41) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([v1],[v2],[v3],[v4])
      
print (r.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:56:26) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([v1,v2,v3,v4])

print (r.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:58:05) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([v1,v2,v3,v4])

print (r.T)
-- EXECUTION TIME:
0.929659
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:58:20) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([v1,v2,v3,v4])

print (r.T)
-- EXECUTION TIME:
1.12173
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:58:27) 
-- CODE:
from numpy import*
from numpy.linalg import *

m = array (eval (input ("insira:")))

v1 = array (m [:,0])
v2 = array (m [:,1])
v3 = array (m [:,2])
v4 = array (m [:,3])
v1 = sorted(v1, reverse=True)
v2 = sorted(v2, reverse=True)
v3 = sorted(v3, reverse=True)
v4 = sorted(v4, reverse=True)

r = array ([v1,v2,v3,v4])

print (r.T)
-- EXECUTION TIME:
1.02962
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
